[package]
name = "nightwriter"
version = "0.1.0"
authors = ["Michael Sloan <mgsloan@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
libc = "0.2.60"
x11 = { version = "2.18.1", features = ["xlib"] }
structopt = "0.2.18"
chrono = "0.4.7"
toml = "0.5.6"
serde = { version = "1.0.101", features = ["derive"] }
dirs = "2.0.2"
quickcheck = "0.9.2"
quickcheck_derive = "0.2.1"
